@@ -108,7 +108,8 @@ sub syncRows
 {
     my ($self, $currentRows) = @_;
 
-    my $logs = EBox::Global->modInstance('logs');
+    my $global = EBox::Global->getInstance();
+    my $alreadyChanged = $global->modIsChanged('logs');
     my $changed = undef;
 
     # Fetch the current log domains stored in gconf
@@ -120,6 +121,7 @@ sub syncRows
 
     # Fetch the current available log domains
     my %currentLogDomains;
+    my $logs = $global->modInstance('logs');
     foreach my $mod (@{ $logs->getLogsModules()}  ) {
       $currentLogDomains{$mod->name} = $mod;
     }
@@ -160,6 +162,11 @@ sub syncRows
         next if (exists $currentLogDomains{$domain});
         $self->removeRow($row->id());
         $changed = 1;
+    }
+
+    if ($changed and (not $alreadyChanged)) {
+        # remove the mark of module change
+        $global->modRestarted('logs');
     }
 
     return $changed;
