@@ -1,4 +1,6 @@
 HEAD
+	+ Fixed bug in ConfigureLogDataTable::syncRows which incorrectly
+	  marked logs module as changed
 	+ Report remoteservices, when required, a change in administration
 	  port
 	+ Create plpgsql language on database setup to avoid migration problems
